# pwa-prototypes

./: .gitignore
data/: thebookstore.books.json
microservices/: compose.yaml
microservices/api-gateway/: .env  Dockerfile  config.yaml  middleware.js  package-lock.json  package.json  server.js
microservices/client/: .env  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json
microservices/client-old/: next.config.mjs  package-lock.json  package.json
microservices/mongodb-orders/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--8291317915568620115.wt  collection-0-426380282568959337.wt  collection-2-426380282568959337.wt  collection-4-426380282568959337.wt  collection-7-426380282568959337.wt  index-1--8291317915568620115.wt  index-1-426380282568959337.wt  index-3-426380282568959337.wt  index-5-426380282568959337.wt  index-6-426380282568959337.wt  index-8-426380282568959337.wt  index-9-426380282568959337.wt  sizeStorer.wt
microservices/order-services/: Cargo.toml  Dockerfile  config-docker.toml
microservices/order-services/src/: config.rs  main.rs
microservices/order-services/src/models/: authors.rs  orders.rs
microservices/product-services/: README.Docker.md  config.toml
monolithic/: compose.yaml
monolithic/client/: .env  package-lock.json  package.json
monolithic/src/: .env  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json
serverless/client/: package-lock.json  package.json
serverless/functions/: index.js  package.json  serverless.yml
serverless/src/: .env  middleware.ts  (+3 more)
(+102 files in other folders)
