# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "order-services"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
log = "0.4"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
toml = "0.8.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.113"
bson = { version = "^2", features = ["chrono-0_4"], default-features = false }
mongodb = "2.1"